2014-06-17  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_flot.php: Fix height of the 
	div with events info in graphs

2014-06-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/agentes/module_manager_editor_common.php,
	  operation/reporting/reporting_viewer.php,
	  operation/agentes/status_monitor.php,
	  include/functions_netflow.php,
	  include/functions_graph.php: Improvements to avoid
	php notices and warnings.

	* godmode/setup/setup_visuals.php,
	  include/functions_config.php: Added a new option
	to choose a custom line thickness for the line between
	the items relations of the visual maps.

	* include/functions_visual_map.php,
	  include/javascript/pandora_visual_console.js: Added
	support to the custom line thickness and fixed some
	problems with the line connections.

2014-06-17  Vanessa Gil <vanessa.gil@artica.es>

	* include/javascript/pandora_module.js: Fixed bug
	adding and deleting macros.

2014-06-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php: Fix ACLs limitations. Now its possible
	give access to any submenu option without have access to the first one.
	Ticket: #856

2014-06-17  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/planned_downtime.editor.php: Changed
	size of time field.

2014-06-17  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css: Added style to fix policy
	modules table layout

2014-06-17  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql: Change Hardcoded IP Address on a default
	events response to localhost

2014-06-16  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/massive/massive_copy_modules.php: Error fixes.
	
	* include/functions_agents.php: Fixed some returns on the
	function "agents_process_manage_config".

2014-06-16  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php: fixed into the function
	networkmap_generate_dot the order of agents, now the agents without