@@ -1,3 +1,13 @@
+2014-06-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* godmode/reporting/visual_console_builder.editor.js:
+	Modified the function "loadFieldsFromDB" to fix the graph
+	type selection.
+
+	* include/functions_visual_map_editor.php: Visual changes
+	on the form created by the function
+	"visual_map_editor_print_item_palette".
+
 2014-06-17  Sergio Martin <sergio.martin@artica.es>
 
 	* include/graphs/functions_flot.php: Fix height of the 
